Fix alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   min-height: 100vh;
-  height: 100%;
   background: #fdfdfd;
   font-family: Poppins;
   font-style: normal;
