--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,11 @@
 .header-container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
+  align-items: center;
 }
 
 .header {
+  height: 20vh;
   width: min(80%, 1440px);
   display: flex;
   flex-direction: row;
