--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,6 @@
-.home {
+.home-container {
   display: flex;
   flex-direction: column;
-  margin: auto;
 }
 
 .home-card {
@@ -9,17 +8,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-content: center;
 }
 
 .home-content-container {
   display: flex;
-  width: 50%;
 }
 
 .home-content {
   margin-left: 20%;
-  width: 360px;
+  width: 50%;
   text-align: left;
   font-size: 20px;
   line-height: 36px;
